Use Checker Framework for annotations